--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,26 @@
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["sustainability", "platform", "nodejs", "express", "mongodb", "firebase"],
+  "keywords": [
+    "sustainability",
+    "platform",
+    "nodejs",
+    "express",
+    "mongodb",
+    "firebase"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "firebase-admin": "^12.0.0",
-    "dotenv": "^16.3.1",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "firebase-admin": "^12.0.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^8.0.3",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
