--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,10 @@
     "firebase-admin": "^12.0.0",
     "mongodb": "^7.0.0",
     "mongoose": "^8.0.3",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
+    "razorpay": "^2.9.6",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
